--- a/Exercices - Copie/18_fizzbuzz.html
+++ b/Exercices - Copie/18_fizzbuzz.html
@@ -23,7 +23,7 @@
 	</p>
 
 
-	<script type="text/javascript" src="18.js"></script>
+	<script type="text/javascript" src="./js/18.js"></script>
 </body>
 
 </html>
